DeveloperOrg/force-app/main/default/objects/Studentts__c/Studentts__c.object-meta.xml
<CustomObject>
    <label>Studentts</label>
    <nameField>
        <label>Studentts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studentss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>