DeveloperOrg/force-app/main/default/objects/Studentts__c/fields/Departmentt__c.field-meta.xml
<CustomField>
    <fullName>Departmentt__c</fullName>
    <label>Departmentt</label>
    <referenceTo>Departments__c</referenceTo>
    <relationshipLabel>Studentss</relationshipLabel>
    <relationshipName>Studentss</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>