DeveloperOrg/force-app/main/default/objects/Studentts__c/fields/Facultys__c.field-meta.xml
<CustomField>
    <fullName>Facultys__c</fullName>
    <label>Facultys</label>
    <referenceTo>Facultys__c</referenceTo>
    <relationshipLabel>Studentss</relationshipLabel>
    <relationshipName>Studentss</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>